pyquest/ql/test/parsing/invalid/test019.ql
// Empty if block
form label {
    if (1 == 2) {
    }
}